# autoresearch

./: .gitignore  prepare.py  pyproject.toml  train.py
tests/trading_eval/: test_artifact.py  test_backtest.py  test_candidate.py  test_data.py  test_llm_candidate.py  test_metrics.py  test_runner.py  test_sklearn_baseline.py  test_splitter.py  test_storage.py  test_ta_ensemble.py  test_ta_ensemble_parity.py
trading_eval/: __init__.py  __main__.py  artifact.py  backtest.py  candidate.py  cli.py  config.py  data.py  metrics.py  runner.py  splitter.py  storage.py
trading_eval/baselines/: __init__.py  llm_candidate.py  run_baselines.py  sklearn_baseline.py  ta_ensemble.py
