[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.7.0",
]

[project.optional-dependencies]
trading = ["scikit-learn>=1.4"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.uv.sources]
torch = [
    { index = "pytorch-xpu" },
]

[tool.uv]
environments = ["sys_platform == 'win32'"]
override-dependencies = [
    "pytorch-triton-xpu; sys_platform == 'linux'",
    "triton-xpu; sys_platform == 'linux'",
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
